@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: August 10, 2008</p>
+      <p>Last Updated: August 12, 2008</p>
     </td>
   </tr>
 </table>
@@ -1029,9 +1029,13 @@ buildroot-0.1.0 2007-03-09 &lt;spudmonkey@racsa.co.cr&gt
 nuttx-0.3.13 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
 	* Added mkfatfs, mkfifo, sleep, usleep and nice commands to NSH
+	* Fixed problem with console input in Cygwin-based simulator; NSH now works
+	  with simulator.
 	* NSH will now execute commands in background
 	* sched_get_priority_max/min returned error on SCHED_RR
 	* Removed duplicate getenv() implementation in /lib
+	* Correct detection of End-of-File in fgets
+	* Implement sh and crude script handler in NSH
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
